@@ -10,7 +10,7 @@
 	<parent>
 		<groupId>com.gentics.mesh</groupId>
 		<artifactId>mesh</artifactId>
-		<version>2.0.13-SNAPSHOT</version>
+		<version>2.1.0-SNAPSHOT</version>
 	</parent>
 
 	<properties>
@@ -39,7 +39,6 @@
 		<module>tests-service-jwt-auth</module>
 		<module>tests-service-local-storage</module>
 		<module>tests-service-metrics-prometheus</module>
-		<module>tests-admin-gui</module>
 
 		<!-- Other tests -->
 <!-- Move here from the root as soon as https://issues.jenkins.io/browse/JENKINS-26472 is fixed -->
@@ -71,7 +70,6 @@
 			<groupId>com.gentics.mesh</groupId>
 			<artifactId>mesh-api</artifactId>
 		</dependency>
-
 		<!-- Additional test dependencies -->
 		<dependency>
 			<groupId>junit</groupId>
@@ -129,6 +127,9 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>--add-opens java.base/java.util=ALL-UNNAMED ${jacoco.env}</argLine>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
